--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,8 @@ verify_ssl = true
 [packages]
 wagtail = "<2.10,>=2.9"
 django = "<3.1,>=3.0"
+django-extensions = "*"
+wagtailuiplus = "*"
 
 [requires]
 python_version = "3.8"
